<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newQuestionActivity"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/questionValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/questionHint"
            android:layout_weight="3"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trueText"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/isTrueCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp">
        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goBack"
            android:textAllCaps="false"
            android:background="@color/questionButtonBG"
            android:layout_marginRight="16dp"/>
        <Button
            android:id="@+id/addQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addQuestion"
            android:textAllCaps="false"
            android:background="@color/questionButtonBG"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
</LinearLayout>