<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressTextView"
        android:textColor="@android:color/white"
        android:text=""
        android:layout_gravity="right"
        android:paddingRight="104dp"
        android:paddingTop="128dp"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/questionTextView"
        android:padding="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/question"
        android:textSize="24sp"
        android:layout_weight="0.5"
        android:onClick="goToNewQuestionActivity"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp"
        android:layout_weight="0.75">

        <Button
            android:id="@+id/falseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="@color/falseColor"
            android:text="@string/falseText"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/trueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="64dp"
            android:background="@color/trueColor"
            android:text="@string/trueText"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/falseButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>